# URL-Shortening-Service

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  extensions.py
app/api/: __init__.py  routes.py
app/api/url/: __init__.py  constants.py  controller.py  model.py  routes.py  schema.py  service.py
app/core/: __init__.py  errors.py  utils.py
migrations/versions/: 2bb3ec5cd21d_create_url_mappings_table.py  911ccd146642_increase_short_code_length_to_16.py  d073ea08b8c7_add_timezone_aware_timestamps_and_.py  e9fac901e696_add_missing_defaults_to_url_mappings.py
tests/: conftest.py  test_get_short_url.py  test_get_short_url_stats.py  test_shorten.py  test_update_short_url.py
tests/api/: test_create_short_url.py  test_delete_short_url.py  test_get_short_url.py  test_redirect_short_url.py  test_update_short_url.py
tests/services/: test_url_model.py  test_url_service.py
