[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "url-shortening-service"
version = "0.1.0"
description = "A Flask URL shortening service."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.16.5",
    "blinker==1.9.0",
    "click==8.1.8",
    "Flask==3.0.3",
    "Flask-Migrate==4.1.0",
    "Flask-SQLAlchemy==3.1.1",
    "greenlet==3.2.5",
    "importlib_metadata==8.7.1",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "Mako==1.3.10",
    "MarkupSafe==3.0.3",
    "psycopg2-binary==2.9.11",
    "python-dotenv==1.0.1",
    "redis==5.0.8",
    "SQLAlchemy==2.0.48",
    "tomli==2.4.0",
    "typing_extensions==4.15.0",
    "Werkzeug==3.1.6",
    "zipp==3.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "ruff==0.6.9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
